--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"jszip": "^3.10.1",
 		"react": "^19.0.0",
-		"react-dom": "^19.0.0"
+		"react-dom": "^19.0.0",
+		"react-resizable-panels": "^4.6.4",
+		"zustand": "^5.0.11"
 	},
 	"pnpm": {
 		"onlyBuiltDependencies": ["@biomejs/biome", "esbuild"]
@@ -18,10 +21,14 @@
 	"devDependencies": {
 		"@biomejs/biome": "^1.9.0",
 		"@tailwindcss/vite": "^4.0.0",
+		"@testing-library/jest-dom": "^6.9.1",
+		"@testing-library/react": "^16.3.2",
+		"@testing-library/user-event": "^14.6.1",
 		"@types/node": "^25.2.3",
 		"@types/react": "^19.0.0",
 		"@types/react-dom": "^19.0.0",
 		"@vitejs/plugin-react": "^4.3.0",
+		"jsdom": "^28.1.0",
 		"tailwindcss": "^4.0.0",
 		"typescript": "^5.7.0",
 		"vite": "^6.0.0",
