chore: add npm scripts for typecheck, lint, and test

--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
 	"scripts": {
 		"dev": "vite",
 		"build": "tsc -b && vite build",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"typecheck": "tsc -b",
+		"lint": "biome check .",
+		"lint:fix": "biome check . --write",
+		"test": "vitest run"
 	},
 	"dependencies": {
 		"jszip": "^3.10.1",
