--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
 		"test": "vitest run"
 	},
 	"dependencies": {
+		"@xyflow/react": "^12.10.0",
+		"dagre": "^0.8.5",
 		"jszip": "^3.10.1",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
@@ -28,6 +30,7 @@
 		"@testing-library/jest-dom": "^6.9.1",
 		"@testing-library/react": "^16.3.2",
 		"@testing-library/user-event": "^14.6.1",
+		"@types/dagre": "^0.7.53",
 		"@types/node": "^25.2.3",
 		"@types/react": "^19.0.0",
 		"@types/react-dom": "^19.0.0",
