--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"react-resizable-panels": "^4.6.4",
+		"valibot": "^1.2.0",
 		"zustand": "^5.0.11"
 	},
 	"pnpm": {
