--- a/biome.json
+++ b/biome.json
@@ -1,15 +1,15 @@
 {
-	"$schema": "https://biomejs.dev/schemas/1.9.0/schema.json",
+	"$schema": "https://biomejs.dev/schemas/2.4.2/schema.json",
 	"files": {
-		"ignore": [".claude/"]
+		"includes": ["**", "!**/.claude"]
+	},
+	"assist": {
+		"enabled": false
 	},
 	"vcs": {
 		"enabled": true,
 		"clientKind": "git",
 		"useIgnoreFile": true
-	},
-	"organizeImports": {
-		"enabled": true
 	},
 	"formatter": {
 		"enabled": true,
@@ -20,8 +20,14 @@
 		"enabled": true,
 		"rules": {
 			"recommended": true,
+			"a11y": {
+				"useHtmlLang": "off",
+				"noNoninteractiveElementToInteractiveRole": "off",
+				"useFocusableInteractive": "off"
+			},
 			"suspicious": {
-				"noExplicitAny": "error"
+				"noExplicitAny": "error",
+				"useIterableCallbackReturn": "off"
 			}
 		}
 	},
