--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
 		"zustand": "^5.0.11"
 	},
 	"pnpm": {
-		"onlyBuiltDependencies": ["@biomejs/biome", "esbuild"]
+		"onlyBuiltDependencies": [
+			"@biomejs/biome",
+			"esbuild"
+		]
 	},
 	"devDependencies": {
-		"@biomejs/biome": "^1.9.0",
+		"@biomejs/biome": "^2.4.2",
 		"@tailwindcss/vite": "^4.0.0",
 		"@testing-library/jest-dom": "^6.9.1",
 		"@testing-library/react": "^16.3.2",
@@ -33,11 +36,11 @@
 		"@types/node": "^25.2.3",
 		"@types/react": "^19.0.0",
 		"@types/react-dom": "^19.0.0",
-		"@vitejs/plugin-react": "^4.3.0",
+		"@vitejs/plugin-react": "^5.1.4",
 		"jsdom": "^28.1.0",
 		"tailwindcss": "^4.0.0",
 		"typescript": "^5.7.0",
-		"vite": "^6.0.0",
-		"vitest": "^3.0.0"
+		"vite": "^7.3.1",
+		"vitest": "^4.0.18"
 	}
 }
