--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,6 @@ jobs:
           node-version: 20
           cache: pnpm
       - run: pnpm install --frozen-lockfile
-      - run: pnpm biome check .
-      - run: pnpm vitest run
+      - run: pnpm run lint
+      - run: pnpm run test
       - run: pnpm run build
