--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
 		"typecheck": "tsc -b",
 		"lint": "biome check .",
 		"lint:fix": "biome check . --write",
-		"test": "vitest run"
+		"test": "vitest run",
+		"audit": "pnpm audit --audit-level=high"
 	},
 	"dependencies": {
 		"jszip": "^3.10.1",
